deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: dashgoat
 namespace: dashgoat
spec:
 selector:
   app: dashgoat
 ports:
 - port: 2000
   targetPort: 2000
   protocol: TCP
   name: http
